many changes chapter 4 finished? added some screenshots etc.

--- a/bib.bib
+++ b/bib.bib
@@ -217,6 +217,24 @@ loops}},
 	url = "http://www.cs.washington.edu/research/constraints/solvers/spe-deltablue-93.html"
 }
 
+@BOOK{EffJS,
+	author = {David Herman},
+	title = {Effective JavaScript: 68 Specific Ways to Harness the Power of JavaScript},
+	day = {26},
+	month = {Nov},
+	year = {2012},
+	isbn = {978-0-321-81218-6},
+	publisher = {Addison-Wesley Professional},
+	pages = 240
+}
+
+@MANUAL{ES5,
+	title = {Ecma-262 Edition 5.1. The ECMAScript Language Specification},
+	year = {2011},
+	organization = {Ecma International},
+	howpublished = {\url{http://www.ecma-international.org/ecma-262/5.1/ECMA-262.pdf}}
+}
+
 @ONLINE{something,
 	title = {},
 	howpublished = {\url{}}
