--- a/main.tex
+++ b/main.tex
@@ -24,8 +24,9 @@
 \startthechapters
 \input{parts/1_problem.tex}
 \input{parts/2_overview.tex}
-\input{parts/3_impl.tex}
-\input{parts/4_results.tex}
+\input{parts/3_benchmarks.tex}
+\input{parts/4_testing_and_optimization.tex}
+% \input{parts/5_results.tex}
 \input{parts/__conclusion.tex}
 
 \bibliography{bib}
