--- a/parts/0_intro.tex
+++ b/parts/0_intro.tex
@@ -4,7 +4,7 @@
 
 JavaScript сегодня является самым популярным языком программирования, используемым для разработки веб-приложений на стороне клиента\cite{JsUsage, LangUsage}. В статье «Самый неправильно понятый язык программирования в мире стал самым популярным в мире языком программирования»\cite{MostPopLang} Дуглас Крокфорд утверждает, что лидирующую позицию JavaScript занял в связи с развитием AJAX, поскольку браузер стал превалирующей системой доставки приложений. Он также констатирует растущую популярность JavaScript, то, что этот язык встраивается в приложения, отмечает значимость языка.
 
-Так же широкому распросторанение способствовал тот факт, что JavaScript является единственным языком программирования, который поддерживается всеми современными браузерами. Таким образом, чтобы разрабатывать код для клиентской части программы на другом языке, отличном от JavaScript необходимо уметь компилировать код на данном языке  в JavaScript. Такая задача часто возникает из-за ряда недостатков языка JavaScript, затрудняющих разработку больших приложений.
+Широкому распросторанению языка Javascript так же способствовал тот факт, что он является единственным языком программирования, который поддерживается всеми современными браузерами. Таким образом, чтобы разрабатывать код для клиентской части программы на другом языке, отличном от JavaScript необходимо уметь компилировать код на данном языке  в JavaScript. Такая задача часто возникает из-за ряда недостатков языка JavaScript, затрудняющих разработку больших приложений.
 %todo заменить на http://www.2ality.com/2013/04/12quirks.html 
 %\cite{JsQuirks}
 К примеру, Дуглас Крокфорд в своей книге <<JavaScript: The Good Parts>>\cite{GoodParts} указывает более 20 неудачных решений, сделанных при проектировании языка. Среди~которых:
