--- a/parts/2_overview.tex
+++ b/parts/2_overview.tex
@@ -130,4 +130,32 @@ TypeScript является обратно совместимым с JavaScript 
 TypeScript отличается от JavaScript возможностью явного определения типов (статическая типизация), поддержкой использования полноценных классов (как в традиционных объектно-ориентированных языках), а также поддержкой подключения модулей. По идее, подобные нововведения должны повысить скорость разработки, читабельность, рефакторинг и повторное использования кода, осуществлять поиск ошибок на этапе разработки и компиляции, а также скорость выполнения программ.
 Предполагается, что в силу полной обратной совместимости адаптация существующих приложений на новый язык программирования может происходить поэтапно, путём постепенного определения типов. \cite{wiki:TypeScript, TypeScript}
 
+\section{Выбор языков для сравнения}
+
+хочется не только понимать что мы улучшились хочется и посмотреть как мы выглядим на фоне остальных
+
+С кем сравниваемся?
+
+JavaScript (бенчмарки от разработчиков v8)
+Dart (бенчмарки от разработчиков)
+Dart2js
+
+Google Web Toolkit
+в паблике тестов производительности нет
+
+Dart -- есть
+
+CoffeeScript и TypeScript нет, во многом это объясняется тем, что эти языки не сильно отличаются от JS ??? у них нету кросс библиотек которые нужно поддерживать на разных платформах. Система типов либо вообще не отличается либо незначительно. Более просетое наследование.
+
+Сравниваться со всем кончено получилось бы и пришлось выбрать нескольких.
+Почему именно эти аналоги?
+Ну во первых это реализация на чистом JS, были взяты тесты от разработчиков v8. Я считаю это обязательным пунктом, чтобы показать, понять на сколько мы хуже чем код написанный вручную на целевом языке.(тем более экспертами) И сделать выводы в чем мы хуже и почему, что можно улучшить. А в итого показать на сколько мы хуже или лучше чем такой код.
+
+Казалось бы что может быть лучше вручную написанного JS кода? Я решил немного повысить планку и взять Dart, особенность в том, что дарт спроектирован с учетом некоторых недостатков JS, язык разрабатывается практически той же коммандой которая разрабатывает v8, нативная реализация дарта выполняется в своей виртуальной машине которая знает о коде чуть больше и очень активно пользуется этим, за счет чего на многих тестах уже сейчас показывает лучшие результаты чем вручную написанный JS
+
+Ну и планачка чуть по ниже это js полученный путем трансляции дарт в js
+
+ТО план минимум работать так же хорошо как dart2js, план максимум работать так же хорошо как dart(видимо не всегда достижимый)
+
+
 НУЖНЫ ВЫВОДЫ!!!
