--- a/parts/0_intro.tex
+++ b/parts/0_intro.tex
@@ -2,24 +2,33 @@
 
 %\section { Введение.}
 
-JavaScript сегодня является самым популярным языком программирования, используемым для разработки веб-приложений на стороне клиента\cite{JsUsage, LangUsage}. В статье «Самый неправильно понятый язык программирования в мире стал самым популярным в мире языком программирования»\cite{MostPopLang} Дуглас Крокфорд утверждает, что лидирующую позицию JavaScript занял в связи с развитием AJAX, поскольку браузер стал превалирующей системой доставки приложений. Он также констатирует растущую популярность JavaScript, то, что этот язык встраивается в приложения, отмечает значимость языка.
+JavaScript сегодня является самым популярным языком программирования, используемым для разработки веб-приложений на стороне клиента\cite{JsUsage, LangUsage}. В статье <<Самый неправильно понятый язык программирования в мире стал самым популярным в мире языком программирования>>\cite{MostPopLang} Дуглас Крокфорд утверждает, что лидирующую позицию JavaScript занял в связи с развитием AJAX, поскольку браузер стал превалирующей системой доставки приложений. Он также констатирует растущую популярность JavaScript, то, что этот язык встраивается в приложения, отмечает значимость языка.
 
-Широкому распросторанению языка Javascript так же способствовал тот факт, что он является единственным языком программирования, который поддерживается всеми современными браузерами. Таким образом, чтобы разрабатывать код для клиентской части программы на другом языке, отличном от JavaScript необходимо уметь компилировать код на данном языке  в JavaScript. Такая задача часто возникает из-за ряда недостатков языка JavaScript, затрудняющих разработку больших приложений.
+Широкому распространению языка Javascript так же способствовал тот факт, что он является единственным языком программирования, который поддерживается всеми современными браузерами. Таким образом, чтобы разрабатывать код для клиентской части программы на другом языке, отличном от JavaScript необходимо уметь компилировать код на данном языке  в JavaScript. Такая задача часто возникает из-за ряда недостатков языка JavaScript, затрудняющих разработку больших приложений.
 %todo заменить на http://www.2ality.com/2013/04/12quirks.html 
-%\cite{JsQuirks}
-К примеру, Дуглас Крокфорд в своей книге <<JavaScript: The Good Parts>>\cite{GoodParts} указывает более 20 неудачных решений, сделанных при проектировании языка. Среди~которых:
+Например, Axel Rauschmayer в серии статей описывает странности присущие языку JavaScript\cite{JsQuirks}, рассмотрим лишь некоторые из них:
 \begin{itemize}
-\item Использование глобальных переменных в стандартных API.
-\item Привязка областей видимости переменных к функциям\\* (а не блокам).
+\item Неявная конвертация значений переменных.
+\item Две константы \path{undefined} и \path{null} имеющую похожую семантику -- отсутствие какого-либо значения. 
 \item Запутанная семантика операторов сложения и сравнения.
-\item Наличие неиспользуемых ключевых слов.
-\end{itemize} 
+\item Запись в неопределенную переменную приводит к созданию глобальной переменной.
+\item Привязка областей видимости переменных к функциям, а не блокам и <<всплытие>> определений переменных и функций.
+\item Реализация замыканий -- когда замыкается все лексическое окружение объемлющей функции.
+\end{itemize}
+%
+% К примеру, Дуглас Крокфорд в своей книге <<JavaScript: The Good Parts>>\cite{GoodParts} указывает более 20 неудачных решений, сделанных при проектировании языка. Среди~которых:
+% \begin{itemize}
+% \item Использование глобальных переменных в стандартных API.
+% \item Привязка областей видимости переменных к функциям\\* (а не блокам).
+% \item Запутанная семантика операторов сложения и сравнения.
+% \item Наличие неиспользуемых ключевых слов.
+% \end{itemize} 
 
 Кроме того, динамическая типизация языка затрудняет разработку инструментов для JavaScript таких, как интегрированные среды разработки (IDE) и статические анализаторы кода. Все эти обстоятельства, а также растущая сложность клиентских приложений, которые приходится реализовывать разработчикам, подталкивают программистов к поиску замены для JavaScript. Благодаря этому возникло множество программных продуктов, осуществляющих трансляцию в JavaScript многих современных языков программирования.\cite{AltJS}
 
-С 2010 года в комапинии JetBrains разрабатывается язык программирования Kotlin. А в 2012 году данный язык обзавелся компилятором в JavaScript. Высокая конкуренция между язками стремящимися занять место языка JavaScript, как основго языка разработки клинетского кода, способствовала их быстрому развитию. В связи с чем стала актуальной задача улучшения качества кода генерируемого компилятором Kotlin в JavaScript.
+С 2010 года в компании JetBrains разрабатывается язык программирования Kotlin. А в 2012 году данный язык обзавелся компилятором в JavaScript. Высокая конкуренция между язками стремящимися занять место языка JavaScript, как основного языка разработки клиентского кода, способствовала их быстрому развитию. В связи с чем стала актуальной задача улучшения качества кода генерируемого компилятором Kotlin в JavaScript.
 
-В данной работе проведится анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью выявить и устранить в нем <<узкие>> места. %Целью работы является улучшить компилятор Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
+В данной работе проводится анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью выявить и устранить в нем <<узкие>> места. %Целью работы является улучшить компилятор Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
 
 % Здесь обычно обосновываются актуальность выбранной темы, цель и содержание поставленных задач, формулируются объект и предмет исследования, указывается избранный метод (или методы) исследования, сообщается, в чем заключается теоретическая значимость и прикладная ценность ожидаемых результатов.
 
