--- a/bib.bib
+++ b/bib.bib
@@ -235,6 +235,31 @@ loops}},
 	howpublished = {\url{http://www.ecma-international.org/ecma-262/5.1/ECMA-262.pdf}}
 }
 
+@manual{scala-spec,
+    author	= {Martin Odersky},
+    year	= {2011},
+    title	= {The Scala Language Specification},
+    note	= {\url{http://scala-lang.org/docu/files/ScalaReference.pdf}}
+}
+
+@article{haskell98,
+    author = {Simon {Peyton Jones} and others},
+    title = {The {Haskell} 98 Language and Libraries: The Revised Report},
+    journal = {Journal of Functional Programming},
+    volume = 13,
+    number = 1,
+    pages = {1--255},
+    month = {Jan},
+    year = 2003
+}
+
+@book{codecomplete,
+    author	= {Steve McConnell},
+    year	= {2004},
+    publisher = {Microsoft Press, Redmond, WA, USA},
+    title	= {Code Complete, Second Edition}
+}
+
 @ONLINE{something,
 	title = {},
 	howpublished = {\url{}}
