--- a/defs.tex
+++ b/defs.tex
@@ -126,28 +126,28 @@
 
 
 
-\newtheorem{conjecture}{Conjecture}[chapter]
-\theoremstyle{definition}
-\newtheorem{theorem}{Теорема}[chapter]
-\newtheorem{lemma}{Лемма}[chapter]
-\newtheorem{corollary}{Следствие}[chapter]
-\newtheorem{proposition}{Утверждение}[chapter]
-\newtheorem{fact}{Fact}[chapter]
-\newtheorem{problem}{Problem}[chapter]
-\newtheorem{exercise}{Exercise}[chapter]
-\newtheorem{example}{Пример}[chapter]
-\newtheorem{definition}{Определение}[chapter]
-\newtheorem{remark}{Замечание}[chapter]
+% \newtheorem{conjecture}{Conjecture}[chapter]
+% \theoremstyle{definition}
+% \newtheorem{theorem}{Теорема}[chapter]
+% \newtheorem{lemma}{Лемма}[chapter]
+% \newtheorem{corollary}{Следствие}[chapter]
+% \newtheorem{proposition}{Утверждение}[chapter]
+% \newtheorem{fact}{Fact}[chapter]
+% \newtheorem{problem}{Problem}[chapter]
+% \newtheorem{exercise}{Exercise}[chapter]
+% \newtheorem{example}{Пример}[chapter]
+% \newtheorem{definition}{Определение}[chapter]
+% \newtheorem{remark}{Замечание}[chapter]
 %\newtheorem{algorithm}{Алгоритм}[chapter]
 %
-\newcommand\vhdef2
-\newcommand{\hdef}[1]{{\renewcommand\vhdef2{\bfseries{#1}}\renewcommand\vhdef1}}
-\newcommand{\class}[1]{{\ifnum\vhdef=2\mathbf{#1}\else\mathrm{#1}\fi}}
-\newcommand{\co}{
-\ifnum\vhdef=2\mathbf{co\,}\else\mathrm{co\hspace{2pt}}\fi
-\ifnum\vhdef=2\textbf{-}\else\textrm{-}\fi
-}
-\newcommand{\Img}{\mathop{\mathrm{Im}}}
+% \newcommand\vhdef2
+% \newcommand{\hdef}[1]{{\renewcommand\vhdef2{\bfseries{#1}}\renewcommand\vhdef1}}
+% \newcommand{\class}[1]{{\ifnum\vhdef=2\mathbf{#1}\else\mathrm{#1}\fi}}
+% \newcommand{\co}{
+% \ifnum\vhdef=2\mathbf{co\,}\else\mathrm{co\hspace{2pt}}\fi
+% \ifnum\vhdef=2\textbf{-}\else\textrm{-}\fi
+% }
+% \newcommand{\Img}{\mathop{\mathrm{Im}}}
 %
 \newcommand{\lang}[1]{\mathtt{#1}}
 \newcommand{\SAT}{\lang{SAT}}
