--- a/parts/1_problem.tex
+++ b/parts/1_problem.tex
@@ -4,10 +4,10 @@
 
 Для достижения данной цели были поставлены следующие задачи:
 \begin{enumerate}
-\item Исследовать существующие JS виртуальные машины, чтобы учитывать осбенности их работы в дальнейшей части работы.
+\item Исследовать существующие JS виртуальные машины, чтобы учитывать особенности их работы в дальнейшей части работы.
 \item Исследовать существующие технологии решения похожих проблем, изучить возможность повторного использования компонентов готовых решений для решения поставленной задачи. Выделить сильные и слабые стороны конкретных решений.
 \item Выбрать и реализовать тесты производительности позволяющие оценить эффективность кода JavaScript,
 полученного в результате трансляции компилятором Kotlin.
 \item Проанализировать результаты тестов и выделить <<узкие места>> в скомпилированном коде.
-\item Предложить и реализовать способы оптимизации выевленных недостатков.
+\item Предложить и реализовать способы оптимизации выявленных недостатков.
 \end{enumerate}
