--- a/parts/4_testing_and_optimization.tex
+++ b/parts/4_testing_and_optimization.tex
@@ -353,7 +353,7 @@ function super_init () {
 \begin{itemize}
 \item Необходимо пересмотреть реализации контейнеров в стандартной библиотеке.
 \item Необходимо, когда это возможно, на этапе компиляции заменять используемые контейнеры на родные для JavaScript аналоги.
-\item Не использовать \path{Kotlin..equals} для проверки ссылочной эквивалентности объектов.
+\item Не использовать \path{Kotlin.equals} для проверки ссылочной эквивалентности объектов.
 \end{itemize}
 
 \begin{figure}[ht!]
@@ -527,7 +527,7 @@ function hashObject(obj) {
 \end{code}
 
 В случае если в качестве ключа используется примитивный тип или закрытый класс в котором не определена своя реализация функции \path{hashCode} можно использовать более простую и быструю реализацию ассоциативного контейнера -- \path{PrimitiveHashMap}.
-Для примитивных типов решение об использовании \path{PrimitiveHashMap} можно принимает на этапе компиляции. Для классов же такое решение не подходит, т.к. в определенных ситуациях это может нарушить <<бинарную>> совместимость. Поэтому было решено осуществлять выбор нужно контейнера во время выполнения. К сожалению, текущая структура классов, времени выполнения, не предоставляет информацию о закрытости типа из-за чего невозможно выполнить данную оптимизацию в полной мере.
+Для примитивных типов решение об использовании \path{PrimitiveHashMap} можно принимать на этапе компиляции. Для классов же такое решение не подходит, т.к. в определенных ситуациях это может нарушить <<бинарную>> совместимость. Поэтому было решено осуществлять выбор нужно контейнера во время выполнения. К сожалению, текущая структура классов, времени выполнения, не предоставляет информацию о закрытости типа из-за чего невозможно выполнить данную оптимизацию в полной мере.
 
 %Можно сделать SmartHashMap
 
