--- a/parts/__conclusion.tex
+++ b/parts/__conclusion.tex
@@ -1,18 +1,35 @@
-\startconclusionpage
-%\section { Заключаение}
+\subsection{Выводы}
 
-% Квалификационной работа завершается заключительной частью, которая так и называется «заключение». В заключении должно быть дано последовательное, логически стройное изложение полученных результатов и указано их соотношение с общей целью и конкретными задачами, сформулированными во введении. Именно здесь содержится, так называемое, «выводное» знание, которое является новым по отношению к исходному знанию и выносится на обсуждение и оценку в процессе защиты работы.
-% Заключительная часть предполагает также наличие обобщенной итоговой оценки проделанной работы с точки зрения ее новизны, теоретической и практической значимости. При этом важно указать, в чем заключается главный смысл работы, какие важные побочные результаты получены, какие встают новые задачи в связи с проведением исследования. 
-% Заключительная часть, составленная по такому плану, дополняет характеристику уровня профессиональной зрелости и квалификации автора работы.
-
-В рамках данной работы был проведен анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью улучшения его производительности. Были выявлены узкие <<места>> генерируемого кода и предложены способы их устранения. Кроме того были реализованы некоторые из предложенных оптимизаций.
-
-
-Автор планирует и дальше работать над этой задачей. В планах на будущее:
+В рамках данной работы был проведен анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью улучшения его производительности. Были выявлены узкие <<места>> генерируемого кода и предложены способы их устранения. Кроме того, были реализованы некоторые из предложенных оптимизаций, благодаря которым код скомпилированный с помощью компилятора Kotlin стал выдавать результаты сравнимые с результатами Dart2js. Реализованные оптимизации:
 \begin{itemize}
+\item Оптимизирован доступ к свойствам.
+%, для свойств с акссесорами используются свойства в стиле ES5
+\item Улучшена реализация наследования.
+%При конструировании больше не используются промежуточные функции.
+\item Реализован <<прямой>> вызов супер конструктора.
+%(похожие фиксы делал и для ES5)
+\item Для сравнения примитивных типов используется оператор \path{===} вместо функции \path{Kotlin.equals}.
+\item Оптимизирована функция \path{Kotlin.equals}, использующая для сравнения.
+ %Еще есть кое какие идеи, которые нужно додумать, и реализовать.(но не сейчас)
+\item Было оптимизировано вычисление хеш-кода (функция \path{hashObject}).
+\item В HashMap и PrimitiveHashMap добавлена возможность использования своей функции хешировани.
+\item Для примитивных типов используется PrimitiveHashMap.
+\end{itemize}
+
+Оптимизации которые пока не получилось реализовать:
+\begin{itemize}
+\item Не получилось реализовать аналог импорта или предоставить оптимальный доступ хотя бы внутри пакета, так как достаточно хорошего решения для текущей структуры генерируемого код придумать не удалось. %Нужно  либо делать костыли, либо существенно менять структуру генерируемого кода.
+
+\item Не получилось реализовать использование \path{PrimitiveHashMap} в случае если в качестве ключа используется закрытый класс в котором не определена своя реализация функции \path{hashCode}.
+\end{itemize}
+
+\subsection{Направления дальнейших работ}
+
+\begin{itemize}
+\item Пересмотреть реализации контейнеров в стандартной библиотеке.
 \item Продолжить оптимизацию генерируемого кода.
 \item Написать новые бенчмарки. 
-\item Сделать чтобы генеририруемый код был более идеомотичным для JavaScript.
+\item Сделать чтобы генерируемый код был более идеомотичным для JavaScript (улучшить структуру генерируемого кода).
 \item Добавить поддержку технологии source-map для удобной отладки сгенерированного кода.
 \item Реализовать отсутствующие JavaScript компиляторе языковые фичи.
 \item Оптимизации на основе Continuation-passing style и 
