add reviewer info on title

--- a/title.tex
+++ b/title.tex
@@ -78,7 +78,7 @@
 
     %\noindent{Рецензент:}
     
-    \doubletext{Рецензент:}{ХЗ}
+    \doubletext{Рецензент:}{А.В. Смаль}
     \begin{center}
         \small (подпись)
     \end{center}
