ch1 after review

--- a/parts/1_problem.tex
+++ b/parts/1_problem.tex
@@ -1,13 +1,13 @@
 \chapter{Постановка задачи}
 
-Целью данной работы является улучшить компилятор Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
+Целью данной работы является улучшение компилятора Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
 
-Для достижения данной цели были поставлены следующие задачи:
+Для достижения данной цели необходимо решить следующие задачи:
 \begin{enumerate}
-\item Исследовать существующие JS виртуальные машины, чтобы учитывать особенности их работы в дальнейшей части работы.
-\item Исследовать существующие технологии решения похожих проблем, изучить возможность повторного использования компонентов готовых решений для решения поставленной задачи. Выделить сильные и слабые стороны конкретных решений.
-\item Выбрать и реализовать тесты производительности позволяющие оценить эффективность кода JavaScript,
+\item Исследовать существующие виртуальные машины JavaScript, чтобы учитывать особенности их работы.
+\item Изучить возможность повторного использования компонентов готовых решений. Выделить сильные и слабые стороны конкретных решений.
+\item Выбрать и реализовать тесты производительности, позволяющие оценить эффективность кода JavaScript,
 полученного в результате трансляции компилятором Kotlin.
 \item Проанализировать результаты тестов и выделить <<узкие места>> в скомпилированном коде.
-\item Предложить и реализовать способы оптимизации выявленных недостатков.
+\item Предложить и реализовать способы устранения выявленных недостатков.
 \end{enumerate}
