--- a/bib.bib
+++ b/bib.bib
@@ -260,6 +260,46 @@ loops}},
     title	= {Code Complete, Second Edition}
 }
 
+@ONLINE{AJAX,
+	title = {Asynchronous JavaScript},
+	howpublished = {\url{http://en.wikipedia.org/wiki/Ajax_(programming)}}
+}
+
+@ONLINE{w3schools,
+	title = {Browser Statistics and Trends},
+	howpublished = {\url{http://www.w3schools.com/browsers/browsers_stats.asp}}
+}
+
+@ONLINE{StatCounter,
+	title = {StatCounter Global Stats},
+	howpublished = {\url{http://gs.statcounter.com/#browser_version_partially_combined-ww-monthly-201205-201305}}
+}
+
+@ONLINE{v8:bench:src,
+	title = {The Sources of V8 Benchmarks},
+	howpublished = {\url{http://code.google.com/p/v8/source/browse/trunk/benchmarks/}}
+}
+
+@ONLINE{dart:bench:src,
+	title = {The Sources of Dart Benchmarks},
+	howpublished = {\url{https://github.com/dart-lang/benchmark_harness}}
+}
+
+@ONLINE{kotlin:bench:src,
+	title = {The Sources of Kotlin Benchmarks},
+	howpublished = {\url{https://github.com/bashor/benchmarks_kt }}
+}
+
+@ONLINE{HavlakBench:src,
+	title = {The Sources of Havlak Benchmarks},
+	howpublished = {\url{http://code.google.com/p/multi-language-bench/}}
+}
+
+@ONLINE{KotlinORG,
+	title = {Kotlin},
+	howpublished = {\url{http://kotlin.jetbrains.org/}}
+}
+
 @ONLINE{something,
 	title = {},
 	howpublished = {\url{}}
