conclusion after review

--- a/parts/__conclusion.tex
+++ b/parts/__conclusion.tex
@@ -1,4 +1,4 @@
-\subsection{Выводы}
+\startconclusionpage
 
 В рамках данной работы был проведен анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью улучшения его производительности. Были выявлены узкие <<места>> генерируемого кода и предложены способы их устранения. Кроме того, были реализованы некоторые из предложенных оптимизаций, благодаря которым код скомпилированный с помощью компилятора Kotlin стал выдавать результаты сравнимые с результатами Dart2js. Реализованные оптимизации:
 \begin{itemize}
@@ -9,29 +9,41 @@
 \item Реализован <<прямой>> вызов супер конструктора.
 %(похожие фиксы делал и для ES5)
 \item Для сравнения примитивных типов используется оператор \path{===} вместо функции \path{Kotlin.equals}.
-\item Оптимизирована функция \path{Kotlin.equals}, использующая для сравнения.
+\item Оптимизирована функция \path{Kotlin.equals}, используемая для сравнения.
  %Еще есть кое какие идеи, которые нужно додумать, и реализовать.(но не сейчас)
 \item Было оптимизировано вычисление хеш-кода (функция \path{hashObject}).
-\item В HashMap и PrimitiveHashMap добавлена возможность использования своей функции хешировани.
+\item В HashMap и PrimitiveHashMap добавлена возможность использования своей функции хеширования.
 \item Для примитивных типов используется PrimitiveHashMap.
 \end{itemize}
 
-Оптимизации которые пока не получилось реализовать:
-\begin{itemize}
-\item Не получилось реализовать аналог импорта или предоставить оптимальный доступ хотя бы внутри пакета, так как достаточно хорошего решения для текущей структуры генерируемого код придумать не удалось. %Нужно  либо делать костыли, либо существенно менять структуру генерируемого кода.
+\null
+%todo
+Результаты работы используются в официальной версии реализации компилятора Kotlin \cite{KotlinORG}.
 
-\item Не получилось реализовать использование \path{PrimitiveHashMap} в случае если в качестве ключа используется закрытый класс в котором не определена своя реализация функции \path{hashCode}.
+\null
+Оптимизации, которые пока не удалось реализовать:
+
+\begin{itemize}
+\item Не удалось реализовать аналог импорта или предоставить оптимальный доступ хотя бы внутри пакета, поскольку не удалось найти достаточно оптимального решения для текущей структуры генерируемого кода. %Нужно  либо делать костыли, либо существенно менять структуру генерируемого кода.
+
+\item Для случая когда в качестве ключа используется закрытый класс, в котором не определена своя реализация функции \path{hashCode}, не удалось реализовать использование \path{PrimitiveHashMap}.
 \end{itemize}
 
-\subsection{Направления дальнейших работ}
+\null
+\begin{LARGE}
+\begin{center}
+\textbf{Направления дальнейших работ}
+\end{center}
+\end{LARGE}
 
+Работа над компилятором Kotlin в JavaScript еще далека от завершающего этапа. В будущем, для его улучшения планируется выполнение следующих работ:
 \begin{itemize}
 \item Пересмотреть реализации контейнеров в стандартной библиотеке.
 \item Продолжить оптимизацию генерируемого кода.
 \item Написать новые бенчмарки. 
 \item Сделать чтобы генерируемый код был более идеомотичным для JavaScript (улучшить структуру генерируемого кода).
 \item Добавить поддержку технологии source-map для удобной отладки сгенерированного кода.
-\item Реализовать отсутствующие JavaScript компиляторе языковые фичи.
-\item Оптимизации на основе Continuation-passing style и 
-Static single assignment
+\item Реализовать конструкции языка Kotlin отсутствующие в JavaScript компиляторе.
+\item Реализовать оптимизации на основе Continuation-passing style и 
+Static single assignment.
 \end{itemize}
