first version of abstarct(refert)

--- a/parts/$_ref.tex
+++ b/parts/$_ref.tex
@@ -1,7 +1,19 @@
 \startreferatpage
 
 {\Large
-Работа выполнена на $47$ страницах в $4$ главах, использовано $38$ источников.
+Работа выполнена на $41$ страницах в $3$ главах, использовано $41$ источник.
+
+% Пояснительная записка содержит 48 страниц, включая 7 таблиц и 27 листингов с примерами исходных кодов.
+
 
 % Реферат должен в кратком виде, в объеме до одной страницы, содержать цель и объект исследования, полученные новые результаты, область их возможного применения, а также данные об объеме работы, количестве разделов, иллюстраций, таблиц, приложений, использованных источников.
 % Текст реферата содержит изложение основных результатов работы и сделанных на их основе выводов. Основная задача реферата – передать максимум информации в тексте минимального объема при сохранении такой формы изложения, которая способствует быстрому восприятию содержащихся в нем сведений.
+
+Работа состоит из трех глав, введения и заключения.
+Во введении в краткой форме объясняются причины возникновения необходимости выполнения такой работы.
+В первой главе описываются цели и задачи данной работы.
+Во второй главе производится краткий обзор предметной области, обосновываются выбор тестов и языков для исследования.
+Третья, основной глава, посвящена анализу результатов тестов и реализации оптимизаций.
+В заключении подводятся итоги выполненных работ и возможных направлений дальнейших работы.
+
+В результате выполнения работы были реализованы тесты оптимизации, с помощью которых были выявлены <<узкие>> места в текущей реализации компилятора Kotlin в JavaScript. Кроме того, были предложены набор оптимизаций для устранения выявленных недостатков, часть из которых были реализованы и используются в официальной версии компилятора Kotlin.
